--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     Datos de contacto: whatsapp 3115841887
     correo juangabriel777@gmail.com
     </p>
-    <a href="fase2/design.html">FASE 2</a>
+    <a href="fase2/design.html">FASE 2</a><br><br><br>
     <a href="Fase3/index.html">FASE 3</a>
 </body>
 </html>
