--- a/Fase3/index.html
+++ b/Fase3/index.html
@@ -4,7 +4,7 @@
     <meta  charset = " UTF-8 " >
     <meta  http-equiv = " X-UA-Compatible " content = " IE = edge " >
     <meta  name = " viewport " content = " width = device-width, initial-scale = 1.0 " >
-    <título > Presentacion fase 2 </título >
+    <título > Presentacion Fase 3 </título >
     <link rel="stylesheet" href="css/miEstilo.css">
 </head >
 <hr >
