--- a/Fase3/tema3.html
+++ b/Fase3/tema3.html
@@ -29,19 +29,20 @@
                 </li>
             <li > Recursos Digitales
                 <ul class="juan">
-                    <li ><a href="recurso1.html">Audio1</a></li>
-                    <li ><a href="recurso2.html">Audio2</a></li>
+                    <li ><a href="recurso1.html">Recurso1</a></li>
+                    <li ><a href="recurso2.html">Recurso2</a></li>
                 </ul >
             </li >
             <li > Aprendizaje
                 <ul class="juan">
-                    <li > Actividad 1 </li >
-                    <li > Actividad 2 </li >
+                    <li ><a href="Prueba1.html">Prueba1</a></li>
+                    <li ><a href="prueba2.html">Prueba2</a></li>
                 </ul >
             </li >
-            <li > Acerca de
-                <ul >
-                    <li > Autor </li >
+            <li > Autor
+                <ul class="juan">
+                    <li ><a href="acerca_de.html">Acerca de</a></li>
+                    
                 </ul >
             </li >
         </ul>
