--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
     <h1> Proyecto de sitio web 2021 16-01</h1>
     <p>
-      mi nombre es  Juan Gabriel Rodriguez Amado  
-      programa: Ingenieria de Sistemas
-    fecha de creación  20/04/2021
-    Datos de contacto: whatsapp 3115841887
-    correo juangabriel777@gmail.com
+      mi nombre es  Juan Gabriel Rodriguez Amado <br><br>
+
+      programa: Ingenieria de Sistemas <br><br>
+
+    fecha de creación  20/04/2021 <br><br>
+    Datos de contacto: whatsapp 3115841887 <br><br>
+
+    correo juangabriel777@gmail.com <br> <br>
     </p>
     <a href="fase2/design.html">FASE 2</a><br><br><br>
     <a href="Fase3/index.html">FASE 3</a>
