--- a/Presentacion.html
+++ b/Presentacion.html
@@ -17,7 +17,7 @@
     Datos de contacto: whatsapp 3115841887 <br><br>
     Correo: juangabriel777@gmail.com <br> <br>
     </p>
-    <a href="fase2/design.html">FASE 2</a><br><br><br>
+    <a href="Fase2/design.html">FASE 2</a><br><br><br>
     <a href="Fase3/index.html">FASE 3</a>
 </body>
 </html>
