--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     Correo: juangabriel777@gmail.com <br> <br>
     </p>
     <a href="Fase3/design.html">FASE 2</a><br><br><br>
-    <a href="Fase3/index.html">FASE 3</a>
+    <a href="Fase3/index.html">FASE 3</a><br><br>
     <a href="Fase4/index.html">FASE 4</a>
 </body>
 </html>
