--- a/Fase4/Prueba1.html
+++ b/Fase4/Prueba1.html
@@ -58,8 +58,15 @@
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Autor
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                  <li><a class="dropdown-item" href="acerca_de.html">Acerca de</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
               </li>
             </ul>
             <!-- <form class="d-flex">
@@ -79,9 +86,9 @@
     
     <section class="col-8">
          <artículo >
-             <h4 > Cuestionario de Evaluacion </h4 >
+             <h4 > Cuestionario de Etiquetas </h4 >
              <p>
-                En este cuestionario se medira el conocimiento adquirido de los temas referentes a listas y enlaces  <br ><br ><br > <br ></p >
+                En este cuestionario se medira el conocimiento adquirido de los temas referentes a etiquetas  <br ><br ><br > <br ></p >
                 
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoNyWxRKwhbKfVa2vwjQbCTPhwzKOv-KqNCATmybCvyh_tTg/viewform?embedded=true" 
                 width="640" height="2639" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
